# Linebot-Eyeskimo

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml  schemas.py
assets/knowledge/: health_education_menu.json  rag_corpus.json
assets/knowledge/static_cards/: education_cataract.json  education_conjunctivitis.json  education_prevention.json
assets/prompts/: system_prompts.json
assets/questionnaires/: cataract.json  conjunctivitis.json  text_mode.json  text_mode_flow.json
assets/static/: fallback_messages.json  location.html
assets/styles/: themes.json
assets/templates/: crop_confirmation.json  health_education_menu.json  history_list.json  history_row.json  location_guide.json  location_result.json  menu_main.json  result_normal.json  result_warning.json  type_selection.json  welcome.json
models/: __init__.py  classify.py  grad_cam.py  segmentation.py
services/: __init__.py  database.py  image.py  line.py  llm.py  log.py
